first ML Model with scikit-learn

--- a/kaggle_ML_1.ipynb
+++ b/kaggle_ML_1.ipynb
@@ -20,7 +20,7 @@
     "- Decision tree model: easy to understand, and the basic building block for some of the best models in data science. There are fancier models that give more accurate predictions.\n",
     "- Simplest possible decision tree: it divides houses into only two categories (Does house has more than 2 bedrooms? Yes or No). The predicted price for any house under consideration is the historical average price of houses in the same category.\n",
     "- We use data to decide how to break the houses into two groups, and then again to determine the predicted price in each group.\n",
-    "- his step of capturing patterns from data is called fitting or training the model.\n",
+    "- This step of capturing patterns from data is called fitting or training the model.\n",
     "- The data used to fit the model is called the training data (complete data set, nothing to predict). Only fit or train at this time.\n",
     "- The details of how the model is fit (e.g. how to split up the data) is complex enough that we will save it for later.\n",
     "- Prediction: after the model has been fit, you can apply it to new data to predict prices of additional homes (by example in this case)."
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -52,14 +52,28 @@
       "\n",
       "House: h_323  - Price: 170000\n",
       "\n",
-      "House: h_092  - Price: 146000\n",
-      "House: h_323  - Price: 170000\n",
-      "House: h_500  - Price: 233000\n"
+      "  --------------------------\n",
+      " |  House   |  Price [USD]  |\n",
+      "  --------------------------\n",
+      " | h_092    |    146,000    |\n",
+      " | h_323    |    170,000    |\n",
+      " | h_500    |    233,000    |\n",
+      "  --------------------------\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' String Formatting Types: :b - :X - := - or, :f, :.3f - :% etc...'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "## Py conditional example - houses objects\n",
+    "## Decision Tree is a conditional case en Py - houses objects\n",
     "class house:\n",
     "    def __init__(self, name, bn, ls):\n",
     "        self.name = name\n",
@@ -95,27 +109,24 @@
     "print()\n",
     "print('House:',  h_323.name, ' - Price:', get_house_price(h_323))\n",
     "print()\n",
+    "hline = ' ' * 2 + '-' * 26\n",
+    "print(hline)\n",
+    "print(' | {:^8} | {:^13} |'.format('House', 'Price [USD]'))\n",
+    "print(hline)\n",
     "for hous in [h_092, h_323, h_500]:\n",
-    "    print('House:',  hous.name, ' - Price:', get_house_price(hous))\n",
+    "    # price = '{:_}'.format(get_house_price(hous))\n",
+    "    price = '{:,}'.format(get_house_price(hous))\n",
+    "    # brooms_num = hous.get_brooms_num()\n",
+    "    # lot_size = hous.get_lot_size()\n",
+    "    print(' | {:<8} | {:>10}    |'.format(hous.name, price))\n",
+    "print(hline)\n",
     "\n",
+    "''' FUTURE: make a function thats return the table as a multiple line strings\n",
+    "    FUTURE 2: add brooms_num and lot_size columns to the table\n",
+    "    FUTURE 3: storages the houses en a SQlite DB\n",
+    "    -- also we can add in Ix to number this hypothetical query list '''\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y"
+    "' String Formatting Types: :b - :X - := - or, :f, :.3f - :% etc...'\n"
    ]
   },
   {
@@ -123,7 +134,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Prediction: after the model has been fit, you can apply it to new data to predict prices of additional homes (by example in this case)."
+    "- You predict the price of any house by tracing through the decision tree, always picking the path corresponding to that house's characteristics. The predicted price for the house is at the bottom of the tree.\n",
+    "- __leaf:__ The point at the bottom where we make a prediction is called a leaf.\n",
+    "- The splits and values at the leaves will be determined by the data, so it's time for you to check out the data you will be working with."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Shoud use f-strings\n",
+    "- https://realpython.com/python-f-strings/\n",
+    "- https://realpython.com/python-string-formatting/\n",
+    "    - Template Strings (standard lib) ++\n",
+    "- https://www.w3schools.com/python/ref_string_format.asp"
    ]
   }
  ],
