finish kaggle_ML_4

--- a/kaggle_ML_3.ipynb
+++ b/kaggle_ML_3.ipynb
@@ -1291,7 +1291,7 @@
    "source": [
     "### Selecting The Prediction Target (using dot-motation)\n",
     "- This single column is stored in a pandas Series.\n",
-    "- We'll use the dot notation to select the column we want to predict, which is called the prediction target. By convention, the prediction target is called y."
+    "- We'll use the dot notation to select the column we want to predict, which is called the prediction target. By convention, the prediction target is called 'y'."
    ]
   },
   {
