--- a/kaggle_ML_5.ipynb
+++ b/kaggle_ML_5.ipynb
@@ -7,9 +7,8 @@
    "source": [
     "# kaggle - Learn: Intro to Machine Learning\n",
     "- https://www.kaggle.com/learn/intro-to-machine-learning\n",
-    "## 4. Model Validation\n",
-    "- Measure the performance of your model, so you can test and compare alternatives.\n",
-    "- Model validation: Measuring model quality is the key to iteratively improving your models."
+    "## 5. Underfitting and Overfitting\n",
+    "- Fine-tune your model for better performance."
    ]
   },
   {
@@ -17,8 +16,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What is Model Validation"
+    "### Experimenting With Different Models\n",
+    "- Decision Tree Model (DecisionTreeRegressor) has many options, most important options determine the tree's depth\n",
+    "    - https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html\n",
+    "    - https://scikit-learn.org/stable/modules/tree.html#tree\n",
+    "- A shallow tree can generate an __underfitting__ model\n",
+    "- A tree that is too deep can lead to __overfitting__."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---- MAE: 29,652.9315 ----\n",
+      "MAE % of real mean: 16.78 %  - real mean (val_y.mean()): 176,725.51\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --> Better to use split data (train + val -or test- data)\n",
+    "### Build a model with train data and validate (quality measure) with validation data\n",
+    "\n",
+    "# 0.- import libraries, modules, functions i'll need.\n",
+    "import pandas as pd                                 # to get & manage df and Series\n",
+    "from sklearn.tree import DecisionTreeRegressor      # to define e model type\n",
+    "from sklearn.model_selection import train_test_split    # to split train & validation (test) data from whole df\n",
+    "from sklearn.metrics import mean_absolute_error     # to calc. MAE\n",
+    "\n",
+    "# 1.- read data + basic filter missing values +  obtain target & features + ...\n",
+    "df = pd.read_csv('train.csv')\n",
+    "#df = df_0.dropna(axis=0)  ---- OJO __ analizar esto para distintos datasets!!!\n",
+    "y = df.SalePrice\n",
+    "X = df[['LotArea', 'YearBuilt', '1stFlrSF', '2ndFlrSF', 'FullBath', 'BedroomAbvGr', 'TotRmsAbvGrd']]\n",
+    "        # (df.column if i want to know what are the columns)\n",
+    "# i won't make de non-split-data model - ONLY the more real model de splitted one\n",
+    "\n",
+    "# 2. - split data (between train and validation) + make and fit this model\n",
+    "train_X, val_X, train_y, val_y = train_test_split(X, y, random_state=1)\n",
+    "df_model = DecisionTreeRegressor(random_state=1)\n",
+    "df_model.fit(train_X, train_y)\n",
+    "\n",
+    "# 3.- Measure model quality: calc predict, calc mae, (optional) calc % mae / average_target\n",
+    "val_predict = df_model.predict(val_X)\n",
+    "mae = mean_absolute_error(val_y, val_predict)\n",
+    "print(f' MAE: {round(mae, 4):,} '.center(26, '-'))\n",
+    "ratio_mae_avg = mae / val_y.mean()\n",
+    "print(f'MAE % of real mean: {round(ratio_mae_avg * 100, 2)} %\\\n",
+    "  - real mean (val_y.mean()): {round(val_y.mean(), 2):,}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -905,6 +993,7 @@
     }
    ],
    "source": [
+    "## a NON split data model: 'in-Sample' -erroneous- situation only for examples\n",
     "home_model = DecisionTreeRegressor()\n",
     "home_model.fit(X, y)    # model fitted using whole dataset\n",
     "\n",
