--- a/kaggle_ML_7.ipynb
+++ b/kaggle_ML_7.ipynb
@@ -16,7 +16,337 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Housing Prices Competition for Kaggle Learn Users ¿?\n"
+    "# Exercise: Machine Learning Competitions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Housing Prices Competition for Kaggle Learn Users\n",
+    "- In this exercise, you will create and submit predictions for a Kaggle competition. You can then improve your model (e.g. by adding features) to apply what you've learned and move up the leaderboard.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LotArea</th>\n",
+       "      <th>YearBuilt</th>\n",
+       "      <th>1stFlrSF</th>\n",
+       "      <th>2ndFlrSF</th>\n",
+       "      <th>FullBath</th>\n",
+       "      <th>BedroomAbvGr</th>\n",
+       "      <th>TotRmsAbvGrd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8450</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>856</td>\n",
+       "      <td>854</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9600</td>\n",
+       "      <td>1976</td>\n",
+       "      <td>1262</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11250</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>920</td>\n",
+       "      <td>866</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9550</td>\n",
+       "      <td>1915</td>\n",
+       "      <td>961</td>\n",
+       "      <td>756</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14260</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1145</td>\n",
+       "      <td>1053</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LotArea  YearBuilt  1stFlrSF  2ndFlrSF  FullBath  BedroomAbvGr  \\\n",
+       "0     8450       2003       856       854         2             3   \n",
+       "1     9600       1976      1262         0         2             3   \n",
+       "2    11250       2001       920       866         2             3   \n",
+       "3     9550       1915       961       756         1             3   \n",
+       "4    14260       2000      1145      1053         2             4   \n",
+       "\n",
+       "   TotRmsAbvGrd  \n",
+       "0             8  \n",
+       "1             6  \n",
+       "2             6  \n",
+       "3             7  \n",
+       "4             9  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rf_mae: 21,857.16\n",
+      "rf_mae: 21,857.16\n",
+      "\n",
+      "Validation MAE for Random Forest model: 21,857\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import necessary libraries\n",
+    "import pandas as pd\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "# Load the data, and separate the target \n",
+    "#home_data = pd.read_csv('train.csv', index_col=0)   # supposes not na values ¿?\n",
+    "home_data = pd.read_csv('train.csv')   # supposes not na values ¿?\n",
+    "y = home_data.SalePrice\n",
+    "\n",
+    "# Create X (separate features) - After completing the exercise, you can return to modify this line!\n",
+    "features = ['LotArea', 'YearBuilt', '1stFlrSF', '2ndFlrSF', 'FullBath', 'BedroomAbvGr', 'TotRmsAbvGrd']\n",
+    "X = home_data[features]\n",
+    "display(X.head())\n",
+    "\n",
+    "# Split into training and validation (test) data\n",
+    "train_X, val_X, train_y, val_y = train_test_split(X, y, random_state=1)\n",
+    "\n",
+    "# Define Random Forest model + fit it with training data + mk val_predicted + calc mae\n",
+    "rf_model = RandomForestRegressor(random_state=1)\n",
+    "rf_model.fit(train_X, train_y)\n",
+    "rf_val_predictions = rf_model.predict(val_X)\n",
+    "rf_mae = mean_absolute_error(val_y, val_predicted)\n",
+    "print(f'rf_mae: {rf_mae:,.2f}')\n",
+    "rf_val_mae = mean_absolute_error(rf_val_predictions, val_y)\n",
+    "print(f'rf_mae: {rf_val_mae:,.2f}')\n",
+    "print()\n",
+    "print(f'Validation MAE for Random Forest model: {rf_val_mae:,.0f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rf_mae: 21,857.16\n"
+     ]
+    }
+   ],
+   "source": [
+    "### this is JM trying to mk an improved model.\n",
+    "## 2. modifying random state ¿? -- NOOOO impact\n",
+    "rf_m2 = RandomForestRegressor()\n",
+    "rf_m2.fit(train_X, train_y)\n",
+    "rf_pred2 = rf_m2.predict(val_X)\n",
+    "rf_mae2 = mean_absolute_error(val_y, val_predicted)\n",
+    "print(f'rf_mae: {rf_mae2:,.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rf_mae: 17,905.90\n"
+     ]
+    }
+   ],
+   "source": [
+    "### this is JM trying to mk an improved model.\n",
+    "## 3. all cols in features but not the ones that are erroneous\n",
+    "    # Some features will cause errors because of issues like missing values or non-numeric data types.\n",
+    "    # Look at the list of columns and think about what might affect home prices.\n",
+    "    # To learn more about each of these features, take a look at the data description\n",
+    "\n",
+    "# Let's try first with ALL not-gen-error cols:\n",
+    "''' Id,MSSubClass,MSZoning,LotFrontage,LotArea,Street,Alley,LotShape,LandContour,Utilities,LotConfig,LandSlope,\n",
+    "Neighborhood,Condition1,Condition2,BldgType,HouseStyle,OverallQual,OverallCond,YearBuilt,YearRemodAdd,RoofStyle,\n",
+    "RoofMatl,Exterior1st,Exterior2nd,MasVnrType,MasVnrArea,ExterQual,ExterCond,Foundation,BsmtQual,BsmtCond,\n",
+    "BsmtExposure,BsmtFinType1,BsmtFinSF1,BsmtFinType2,BsmtFinSF2,BsmtUnfSF,TotalBsmtSF,Heating,HeatingQC,CentralAir,\n",
+    "Electrical,1stFlrSF,2ndFlrSF,LowQualFinSF,GrLivArea,BsmtFullBath,BsmtHalfBath,FullBath,HalfBath,BedroomAbvGr,\n",
+    "KitchenAbvGr,KitchenQual,TotRmsAbvGrd,Functional,Fireplaces,FireplaceQu,GarageType,GarageYrBlt,GarageFinish,\n",
+    "GarageCars,GarageArea,GarageQual,GarageCond,PavedDrive,WoodDeckSF,OpenPorchSF,EnclosedPorch,3SsnPorch,ScreenPorch,\n",
+    "PoolArea,PoolQC,Fence,MiscFeature,MiscVal,MoSold,YrSold,SaleType,SaleCondition'''\n",
+    "\n",
+    "f3_tring= '''MSSubClass,LotArea,OverallQual,OverallCond,YearBuilt,YearRemodAdd,1stFlrSF,2ndFlrSF,LowQualFinSF,\\\n",
+    "GrLivArea,FullBath,HalfBath,BedroomAbvGr,KitchenAbvGr,TotRmsAbvGrd,Fireplaces,WoodDeckSF,OpenPorchSF,\\\n",
+    "EnclosedPorch,3SsnPorch,ScreenPorch,PoolArea,MiscVal,MoSold,YrSold'''\n",
+    "\n",
+    "#print(f3_tring)\n",
+    "\n",
+    "features3 = f3_tring.split(',')\n",
+    "#print(features3)\n",
+    "\n",
+    "X3 = home_data[features3]\n",
+    "#display(X3.head())\n",
+    "\n",
+    "# Split into training and validation (test) data\n",
+    "train_X3, val_X3, train_y3, val_y3 = train_test_split(X3, y, random_state=1)\n",
+    "\n",
+    "# Define Random Forest model + fit it with training data + mk val_predicted + calc mae\n",
+    "rf_m3 = RandomForestRegressor(random_state=1)\n",
+    "rf_m3.fit(train_X3, train_y3)\n",
+    "rf_val_pred3 = rf_m3.predict(val_X3)\n",
+    "rf_mae3 = mean_absolute_error(val_y3, rf_val_pred3)\n",
+    "print(f'rf_mae: {rf_mae3:,.2f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### NEW TRY 4... USING RandomForest Params.. see documentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train a model for the competition\n",
+    "- The code cell above trains a Random Forest model on train_X and train_y.\n",
+    "- Use the code cell below to build a Random Forest model and train it on all of X and y."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-3 {color: black;background-color: white;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestRegressor(random_state=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestRegressor</label><div class=\"sk-toggleable__content\"><pre>RandomForestRegressor(random_state=1)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "RandomForestRegressor(random_state=1)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# To improve accuracy, create a new Random Forest model which you will train on all training data\n",
+    "rf_model_on_full_data = RandomForestRegressor(random_state=1)\n",
+    "\n",
+    "# fit rf_model_on_full_data on all data from the training data\n",
+    "rf_model_on_full_data.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# path to file you will use for predictions\n",
+    "''' local '''\n",
+    "\n",
+    "# read test data file using pandas\n",
+    "test_data = pd.read_csv('test.csv')\n",
+    "#test_data\n",
+    "\n",
+    "# create test_X which comes from test_data but includes only the columns you used for prediction.\n",
+    "# The list of columns is stored in a variable called features\n",
+    "test_X = test_data[features]\n",
+    "\n",
+    "# make predictions which we will submit. \n",
+    "test_preds = rf_model_on_full_data.predict(test_X)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before submitting, run a check to make sure your test_preds have the right format. - ok!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run the code to save predictions in the format used for competition scoring\n",
+    "\n",
+    "output = pd.DataFrame({'Id': test_data.Id,\n",
+    "                       'SalePrice': test_preds})\n",
+    "output.to_csv('submission.csv', index=False)"
    ]
   }
  ],
