add two alternatives to House-Price competition en kaggle_ML_7

--- a/kaggle_ML_7.ipynb
+++ b/kaggle_ML_7.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -141,10 +141,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rf_mae: 21,857.16\n",
-      "rf_mae: 21,857.16\n",
+      "rf_mae: 20,353.67\n",
+      "rf_mae: 20,353.67\n",
       "\n",
-      "Validation MAE for Random Forest model: 21,857\n"
+      "Validation MAE for Random Forest model: 20,354\n"
      ]
     }
    ],
@@ -154,6 +154,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_absolute_error\n",
+    "from pprint import pprint\n",
     "\n",
     "# Load the data, and separate the target \n",
     "#home_data = pd.read_csv('train.csv', index_col=0)   # supposes not na values ¿?\n",
@@ -166,13 +167,13 @@
     "display(X.head())\n",
     "\n",
     "# Split into training and validation (test) data\n",
-    "train_X, val_X, train_y, val_y = train_test_split(X, y, random_state=1)\n",
+    "train_X, val_X, train_y, val_y = train_test_split(X, y, random_state=18)\n",
     "\n",
     "# Define Random Forest model + fit it with training data + mk val_predicted + calc mae\n",
-    "rf_model = RandomForestRegressor(random_state=1)\n",
+    "rf_model = RandomForestRegressor(random_state=18)\n",
     "rf_model.fit(train_X, train_y)\n",
     "rf_val_predictions = rf_model.predict(val_X)\n",
-    "rf_mae = mean_absolute_error(val_y, val_predicted)\n",
+    "rf_mae = mean_absolute_error(val_y, rf_val_predictions)\n",
     "print(f'rf_mae: {rf_mae:,.2f}')\n",
     "rf_val_mae = mean_absolute_error(rf_val_predictions, val_y)\n",
     "print(f'rf_mae: {rf_val_mae:,.2f}')\n",
@@ -182,30 +183,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rf_mae: 21,857.16\n"
+      "random_state: 97  -->  rf_mae: 19,639.44\n"
      ]
     }
    ],
    "source": [
     "### this is JM trying to mk an improved model.\n",
-    "## 2. modifying random state ¿? -- NOOOO impact\n",
-    "rf_m2 = RandomForestRegressor()\n",
-    "rf_m2.fit(train_X, train_y)\n",
-    "rf_pred2 = rf_m2.predict(val_X)\n",
-    "rf_mae2 = mean_absolute_error(val_y, val_predicted)\n",
-    "print(f'rf_mae: {rf_mae2:,.2f}')"
+    "## 2. modifying random state ¿? -- YESS selecting the same random_state in train_test_split and in de model definition\n",
+    "def get_mae_randstate(randstate):\n",
+    "    train_X, val_X, train_y, val_y = train_test_split(X, y, random_state=randstate)\n",
+    "    rf_m2 = RandomForestRegressor(random_state=randstate)\n",
+    "    rf_m2.fit(train_X, train_y)\n",
+    "    rf_pred2 = rf_m2.predict(val_X)\n",
+    "    rf_mae2 = mean_absolute_error(val_y, rf_pred2)\n",
+    "    return rf_mae2\n",
+    "\n",
+    "dic = {}\n",
+    "for i in range(300):\n",
+    "    rf_mae2 = get_mae_randstate(i)\n",
+    "    dic[i] = rf_mae2\n",
+    "\n",
+    "min_mae = min(dic.values())\n",
+    "for k in dic.keys():\n",
+    "    if dic[k] == min_mae:\n",
+    "        k_min = k\n",
+    "        break\n",
+    "\n",
+    "print(f'random_state: {k_min}  -->  rf_mae: {min_mae:,.2f}')\n",
+    "#print(dic)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -253,21 +270,271 @@
     "rf_m3.fit(train_X3, train_y3)\n",
     "rf_val_pred3 = rf_m3.predict(val_X3)\n",
     "rf_mae3 = mean_absolute_error(val_y3, rf_val_pred3)\n",
-    "print(f'rf_mae: {rf_mae3:,.2f}')\n"
+    "print(f'rf_mae: {rf_mae3:,.2f}')\n",
+    "\n",
+    "# r_s=1 --> 17,905.90\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "random_state: 777  -->  rf_mae: 16,269.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 3 BIS____\n",
+    "def get_mae_randstate(randstate):\n",
+    "    train_X3, val_X3, train_y3, val_y3 = train_test_split(X3, y, random_state=randstate)\n",
+    "    rf_m3 = RandomForestRegressor(random_state=randstate)\n",
+    "    rf_m3.fit(train_X3, train_y3)\n",
+    "    rf_val_pred3 = rf_m3.predict(val_X3)\n",
+    "    rf_mae3 = mean_absolute_error(val_y3, rf_val_pred3)\n",
+    "    return rf_mae3\n",
+    "\n",
+    "dic = {}\n",
+    "for i in range(750, 790):\n",
+    "    rf_mae3 = get_mae_randstate(i)\n",
+    "    dic[i] = rf_mae3\n",
+    "\n",
+    "min_mae = min(dic.values())\n",
+    "for k in dic.keys():\n",
+    "    if dic[k] == min_mae:\n",
+    "        k_min = k\n",
+    "        break\n",
+    "\n",
+    "print(f'random_state: {k_min}  -->  rf_mae: {min_mae:,.2f}')\n",
+    "\n",
+    "# r_s=238 --> 16,829.28\n",
+    "# random_state: 450 _1  -->  rf_mae: 16,619.22\n",
+    "# random_state: 777 _1  -->  rf_mae: 16,543.76\n",
+    "# random_state: 777  -->  rf_mae: 16,269.00"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bootstrap': True,\n",
+      " 'ccp_alpha': 0.0,\n",
+      " 'criterion': 'squared_error',\n",
+      " 'max_depth': None,\n",
+      " 'max_features': 1.0,\n",
+      " 'max_leaf_nodes': None,\n",
+      " 'max_samples': None,\n",
+      " 'min_impurity_decrease': 0.0,\n",
+      " 'min_samples_leaf': 1,\n",
+      " 'min_samples_split': 2,\n",
+      " 'min_weight_fraction_leaf': 0.0,\n",
+      " 'n_estimators': 100,\n",
+      " 'n_jobs': None,\n",
+      " 'oob_score': False,\n",
+      " 'random_state': 1,\n",
+      " 'verbose': 0,\n",
+      " 'warm_start': False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "### this is JM trying to mk an improved model.\n",
+    "## 4. hyperparams?___ \n",
+    "    # bootstrap: True (3 examples)\n",
+    "    # max_depth: 80 (1 example)\n",
+    "    # max_features: 'auto'\n",
+    "    # min_samples_leaf: 50 or 5\n",
+    "    # min_samples_split: 12\n",
+    "    # n_estimators: 100 (2 examples)\n",
+    "    # random_state: 777 (above)\n",
+    "\n",
+    "pprint(rf_m3.get_params())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bootstrap': True,\n",
+      " 'ccp_alpha': 0.0,\n",
+      " 'criterion': 'squared_error',\n",
+      " 'max_depth': None,\n",
+      " 'max_features': 6,\n",
+      " 'max_leaf_nodes': None,\n",
+      " 'max_samples': None,\n",
+      " 'min_impurity_decrease': 0.0,\n",
+      " 'min_samples_leaf': 1,\n",
+      " 'min_samples_split': 2,\n",
+      " 'min_weight_fraction_leaf': 0.0,\n",
+      " 'n_estimators': 43,\n",
+      " 'n_jobs': None,\n",
+      " 'oob_score': False,\n",
+      " 'random_state': 777,\n",
+      " 'verbose': 0,\n",
+      " 'warm_start': False}\n",
+      "rf_mae: 15,769.81\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' {'bootstrap': True,\n",
+    " 'max_depth': 80,\n",
+    " 'max_features': 3,\n",
+    " 'min_samples_leaf': 5,\n",
+    " 'min_samples_split': 12,\n",
+    " 'n_estimators': 100} '''\n",
+    "\n",
+    "''' (n_estimator = 100, oob_score = TRUE, n_jobs = -1,random_state =50,\n",
+    "max_features = \"auto\", min_samples_leaf = 50) '''\n",
+    "\n",
+    "f4_tring= '''MSSubClass,LotArea,OverallQual,OverallCond,YearBuilt,YearRemodAdd,1stFlrSF,2ndFlrSF,LowQualFinSF,\\\n",
+    "GrLivArea,FullBath,HalfBath,BedroomAbvGr,KitchenAbvGr,TotRmsAbvGrd,Fireplaces,WoodDeckSF,OpenPorchSF,\\\n",
+    "EnclosedPorch,3SsnPorch,ScreenPorch,PoolArea,MiscVal,MoSold,YrSold'''\n",
+    "\n",
+    "#print(f3_tring)\n",
+    "\n",
+    "features4 = f4_tring.split(',')\n",
+    "#print(features3)\n",
+    "\n",
+    "X4 = home_data[features4]\n",
+    "#display(X3.head())\n",
+    "\n",
+    "# Split into training and validation (test) data\n",
+    "train_X4, val_X4, train_y4, val_y4 = train_test_split(X4, y, random_state=777)\n",
+    "\n",
+    "# Define Random Forest model + fit it with training data + mk val_predicted + calc mae\n",
+    "# rf_m4 = RandomForestRegressor(max_depth=80, max_features=9, min_samples_leaf=5, min_samples_split=12,\n",
+    "#                               n_estimators=120, random_state=238)\n",
+    "rf_m4 = RandomForestRegressor(n_estimators=43, random_state=777, max_features=6)\n",
+    "\n",
+    "pprint(rf_m4.get_params())\n",
+    "\n",
+    "rf_m4.fit(train_X4, train_y4)\n",
+    "rf_val_pred4 = rf_m4.predict(val_X4)\n",
+    "rf_mae4 = mean_absolute_error(val_y4, rf_val_pred4)\n",
+    "print(f'rf_mae: {rf_mae4:,.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rf_mae5: 19,412.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "### New rf_model to try other train_test_split parameter specially\n",
+    "# from previous: df, and y\n",
+    "\n",
+    "f5_tring= '''MSSubClass,LotArea,OverallQual,OverallCond,YearBuilt,YearRemodAdd,1stFlrSF,2ndFlrSF,LowQualFinSF,\\\n",
+    "GrLivArea,FullBath,HalfBath,BedroomAbvGr,KitchenAbvGr,TotRmsAbvGrd,Fireplaces,WoodDeckSF,OpenPorchSF,\\\n",
+    "EnclosedPorch,3SsnPorch,ScreenPorch,PoolArea,MiscVal,MoSold,YrSold'''\n",
+    "features5 = f5_tring.split(',')\n",
+    "X5 = home_data[features5]\n",
+    "train_X5, val_X5, train_y5, val_y5 = train_test_split(X5, y, test_size=.2,\n",
+    "                                                      random_state=42)\n",
+    "rf_m5 = RandomForestRegressor(random_state=42).fit(train_X5, train_y5)\n",
+    "rf_pred5 = rf_m5.predict(val_X5)\n",
+    "rf_mae5 = mean_absolute_error(val_y5, rf_pred5)\n",
+    "print(f'rf_mae5: {rf_mae5:,.2f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rf_mae5: 15,755.64\n"
+     ]
+    }
+   ],
+   "source": [
+    "### New rf_m6\n",
+    "# from previous: df, and y\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "f6_tring= '''MSSubClass,LotArea,OverallQual,OverallCond,YearBuilt,YearRemodAdd,1stFlrSF,2ndFlrSF,LowQualFinSF,\\\n",
+    "GrLivArea,FullBath,HalfBath,BedroomAbvGr,KitchenAbvGr,TotRmsAbvGrd,Fireplaces,WoodDeckSF,OpenPorchSF,\\\n",
+    "EnclosedPorch,3SsnPorch,ScreenPorch,PoolArea,MiscVal,MoSold,YrSold'''\n",
+    "features6 = f6_tring.split(',')\n",
+    "X6 = home_data[features6]\n",
+    "train_X6, val_X6, train_y6, val_y6 = train_test_split(X6, y, test_size=.2,\n",
+    "                                                      random_state=238)\n",
+    "\n",
+    "# use ensemble Random Forest method to improve accuracy. First we must perform GridSearchCV to find out\n",
+    "# the best params.\n",
+    "def model_tuning_GS(model, parameter_dict):\n",
+    "    \"\"\"Function to perform hyperparameter turning for the classification models\n",
+    "    using GridSearch.\"\"\"\n",
+    "    # inspect the model params.\n",
+    "    model.get_params()\n",
+    "    # define the parameters using a dictionary that we want to test.\n",
+    "    model_grid = parameter_dict\n",
+    "    # initialise a GSCV object with the model as an argument. scoring is set to accuracy and CV set to 5.\n",
+    "    Grid_model = GridSearchCV(estimator=model, param_grid=model_grid, cv=10, scoring=\"accuracy\")\n",
+    "    # fit the model to data.\n",
+    "    Grid_model.fit(train_X6, train_y6)\n",
+    "    # extract the best estimator, accuracy score and print them.\n",
+    "    print(\"GridSearchCV results:\", model.__class__.__name__)\n",
+    "    # print best estimator\n",
+    "    print(\"Best Estimator:\\n\", Grid_model.best_estimator_)\n",
+    "    # printing the mean cross-validated score of the best_estimator:\n",
+    "    print(\"\\n Best Score:\\n\", Grid_model.best_score_)\n",
+    "    # printing the parameter setting that gave the best results on the hold out testing data.:\n",
+    "    print(\"\\n Best Hyperparameters:\\n\", Grid_model.best_params_)\n",
+    "\n",
+    "#  call the GridSearchCV function on the random forest.\n",
+    "parameter_dict = {'n_estimators': [40, 45, 50, 55, 60],\n",
+    "                  'max_depth': [1, 5, 8, 9, 10],\n",
+    "                  'min_samples_leaf': [0.1, 0.2],\n",
+    "                  #'criterion': ['squared_error', 'friedman_mse', 'poisson', 'absolute_error']}\n",
+    "                    'criterion':['gini', 'entropy', 'log_loss']}\n",
+    "\n",
+    "#model_tuning_GS(RandomForestClassifier(random_state=42), parameter_dict)\n",
+    "# --https://towardsdev.com/predicting-the-premier-league-with-random-forest-fbc7d320a37e\n",
+    "\n",
+    "rf_m6 = RandomForestRegressor(n_estimators=42, random_state=238)\n",
+    "rf_m6.fit(train_X6, train_y6)\n",
+    "rf_pred6 = rf_m6.predict(val_X6)\n",
+    "rf_mae6 = mean_absolute_error(val_y6, rf_pred6)\n",
+    "print(f'rf_mae5: {rf_mae6:,.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "### NEW TRY 4... USING RandomForest Params.. see documentation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   },
   {
@@ -282,23 +549,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>#sk-container-id-3 {color: black;background-color: white;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestRegressor(random_state=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestRegressor</label><div class=\"sk-toggleable__content\"><pre>RandomForestRegressor(random_state=1)</pre></div></div></div></div></div>"
-      ],
-      "text/plain": [
-       "RandomForestRegressor(random_state=1)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To improve accuracy, create a new Random Forest model which you will train on all training data\n",
     "rf_model_on_full_data = RandomForestRegressor(random_state=1)\n",
@@ -309,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
